--- a/index.html
+++ b/index.html
@@ -1,36 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1 ДЗ HTML</title>
-    <link rel="icon" href="favicon.png.png" type="x-icon">
-</head>
-<body>
-    <h1>Игра Престолов- новая веха в истории ТВ-сериалов</h1>
-    <p> "Игра престолов" (англ. <a href="https://en.wikipedia.org/wiki/Game_of_Thrones">Game of Thrones</a>) американский телесериал в жанре "историческое фэнтэзи" со сквозным сюжетом, созданный по мотивам цикла романов "Песнь льда и пламени" писателя Джорджа Мартина. Премьера в США состоялась на кабельном телеканале НВО 17 апреля 2011 года. Сериал сразу получил высокие оценки критиков и преданную армию фанатов, а телерейтинги росли с каждым сезоном.</p>
-    <h2>Cюжет</h2>
-    <p>Основное действие происходит в <u>Вестерос</u>,где пять разных фракций ведут борьбу за <b>Железный трон</b> или за право создать свое королевство: </p>
-    <ol>
-<li>Джжоффри Баратеон и Ланнистеры</li>
-<li>Ренли Баратеон + дом Тиррелов</li>
-<li>Станнис Баратеон</li>
-<li>Робб Старк и армия Севера</li>
-<li>Грейджои</li>
-    </ol>
-    <img src="iron_throne.jpg" alt="Железный Трон" title="Железный Трон Короля андалов и первых людей">
-    <p> <i>Железный трон</i></p>
-<p> Параллельно в далеком <u>Эссосе</u> дочери свергнутого короля- Дейнерис Таргариен предстоит пройти путь от красивой куклы до самостоятельного игрока в престолы.</p>
-<h2>Влияние на телерынок</h2>
-<p>"Игра Престолов" показала продюссерам и телеканалам, что дорогие и масштабные сериалы, больше похожие на многосерийные фильмы, чем на классические "процедуалы", очень востребованы у публики и казавшиеся ранее огромными затраты на одну серию- от 10 млн долларов за серию-прекрасно окупаются огромными телерейтингами.</p>
-<ul>
-<li>Ведьмак (Netflix)</li>
-<li>Пацаны (Amazon)</li>
-<li>Мандалорец (Disney+) </li>
-<li><a href="https://ru.wikipedia.org/wiki/Чернобыль_(мини-сериал)">Чернобыль (HBO)</a> </li>
-<li>Американские боги (Starz) </li>
-</ul>
-<p><input type="button" value="Подробнее о сериале"</p>
-</body>
+    <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=<>, initial-scale=1.0">
+            <title>HW Simple photo</title>
+            <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+            <link href="style.css" rel="stylesheet">
 
-</html>
+    </head>
+    <body>
+        <header>
+    <ul class="header_menu"> 
+    <li class="header_menu_item"><a href="https://dan-it.com.ua/uk/" target="_blank">Home </a></li>
+    <li class="header_menu_item"><a href="https://dan-it.com.ua/uk/" target="_blank">Photoapp</a> </li>
+    <li class="header_menu_item"><a href="https://dan-it.com.ua/uk/" target="_blank"></a>Design</li>
+    <li class="header_menu_item"><a href="https://dan-it.com.ua/uk/" target="_blank"></a> Download</li>
+    </ul>
+        </header>
+        <main>
+            <div class="image_div"><img class="image" src="image 1.png"></div>
+            <div class="content">
+                <h2 class="content_title">Represent your life with a simple photo</h2>
+                <p class="content_text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam velit est, ullamcorper a vestibulum eu, pulvinar ut orci. Donec gravida orci non suscipit consequat. Suspendisse ut dui sed tortor ultrices tempus. Phasellus dictum lectus ex, ut placerat massa pharetra at. Nullam felis dolor, volutpat nec congue eget, ornare vitae quam. In finibus urna vel molestie tempus. Duis et convallis odio, convallis porta eros. Curabitur vel leo turpis. Morbi consequat ante in odio varius hendrerit. </p>
+                <p class="content_text second_par">Vestibulum varius pretium mattis. Aliquam vulputate maximus est, quis euismod elit sodales placerat. Proin pretium arcu a odio consectetur, nec vestibulum nisi venenatis. Nulla eleifend nisi vel pretium aliquam. Cras ornare elementum vehicula. Curabitur at hendrerit nisl. Donec ligula mauris, commodo non diam et, aliquam aliquet lectus. Maecenas volutpat, nisl in consectetur condimentum, ligula mauris fringilla mauris, eu aliquet mauris ligula at orci. Cras efficitur non massa in auctor. Sed posuere leo quam, sed varius massa euismod sit amet. Proin vehicula egestas massa. Nullam tempus massa a elementum posuere. Nam ac velit ac purus vestibulum fringilla. Nunc a tortor posuere, ultrices nisi id, interdum risus. Donec laoreet tempus libero ut viverra. Proin dapibus magna vel urna ornare, et pretium metus facilisis.  </p>
+            </div>
+        </main>
+        <footer>
+            <div class="button">
+        <a class="btn">Get started </a>
+        </div>
+
+    <div class="footer_text">
+        <p>Copyright by phototime - all right reserved</p>
+    </div>
+</footer>
+
+    </body>
+    </html>
